# rustlike

./: Cargo.toml  shell.nix
src/: defer.rs  graphics.rs  lib.rs  main.rs  navmesh.rs  render.rs  sim.rs  state.rs  window.rs
